fix: DSD name next to DSD logo has wrong font weight (WEB-27)

--- a/src/app/components/navbar/navbar.module.css
+++ b/src/app/components/navbar/navbar.module.css
@@ -25,6 +25,10 @@
   gap: 35px;
 }
 
+.home {
+  font-weight: 900;
+}
+
 .homeLink {
   display: flex;
   align-items: center;
@@ -87,7 +91,6 @@
 @media (max-width: 1150px) {
   .home {
     display: none;
-    font-weight: 900;
   }
 }
 @media (max-width: 768px) {
